[package]
name = "tristimg"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.28", features = ["derive", "env"] }
dotenvy = "0.15.7"
hdf5 = { git = "https://github.com/aldanor/hdf5-rust.git", rev = "43015ddaa87e62b63dc1b1ae7fed49a430e1b53a", features = [
  "static",
] }
num_enum = "0.7.3"
ptree = "0.5.2"
thiserror = "1.0.64"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
